# Skydrop

./: .gitattributes  .gitignore  .pylintrc  CHANGELOG  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-pipeline.yaml
skydrop/: __init__.py  api.py  base.py  data.py  entity.py  error.py
test/: __init__.py  test.py  test_api.py
test/res/: open_api_success.json
