[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skydrop"
version = "0.1.3"
authors = [
  { name="ShaidK", email="ShaidK@duck.com" },
]
description = "Python Module which is used to obtained Weather Conditions & Information based upon a specific Airports Locations"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ShaidK/Skydrop"
Issues   = "https://github.com/ShaidK/Skydrop/issues"
